--- a/normal/Profile.css
+++ b/normal/Profile.css
@@ -7,7 +7,26 @@ body {
     font-family: 'Arial', sans-serif;
     background-color: #f7f6fb;
 }
-
+.back-button {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: #000000;
+    color: white;
+    border: 2px sold rgb(255, 255, 255);
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  .back-button:hover {
+    background-color: #ffffff;
+    color: #000000;
+    border: 2px sold rgb(0, 0, 0);
+  }
+  .back-button :active{
+    transform: scale(1.1);
+  }
 .profile-container {
     margin: 10px;
 }
