--- a/biolink/src/App.css
+++ b/biolink/src/App.css
@@ -166,6 +166,7 @@ body {
   font-weight: bold;
   color: black;
   margin-bottom: 8px;
+  margin-top: 100px;
 }
 
 .search-input,
@@ -311,7 +312,8 @@ body {
 
 @media(min-width: 800px) {
     .app-container {
-      margin: 20px;
+      margin: 0px;
+      padding:0px;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
