--- a/biolink/src/App.css
+++ b/biolink/src/App.css
@@ -35,26 +35,22 @@ body {
   position: absolute;
   top: 16px;
   left: 16px;
-  background-color: black;
-  color: white;
-  padding: 10px 20px;
+  background-color: #f6f6f6;
+  color: #ffffff;
+  padding-top: 0px ;
+  margin-top:0px;
   border: none;
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
-  transition: background-color 0.3s;
-}
-.menu-toggle-button {
-  background: #f6f6f6;
-  color: #ffffff;
-  border: 1px solid black;
-  border: none;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 4px;
-  cursor: pointer;
+  margin-top: 0px;
+  transition: background-color 0.3s;
 }
+
 .menu-toggle-button-close{
   margin-top: 0px;
   margin-left:auto;
