--- a/normal/index.css
+++ b/normal/index.css
@@ -236,6 +236,7 @@ body {
   margin:5px 10px 5px 5px;
   height: 100px;
   object-fit: cover;
+  border: 1.5px solid rgb(0, 0, 0);
 }
 .result-item:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
