--- a/normal/index.css
+++ b/normal/index.css
@@ -270,7 +270,7 @@ body {
     .logo h3 {
       font-size: 20px;
     }
-  
+  /*
     .menu-toggle-button {
       padding: 12px 20px 12px 10px;
       font-size: 16px;
@@ -287,7 +287,7 @@ body {
     .menu-item {
       font-size: 16px;
     }
-  
+  */
     .search-title {
       font-size: 18px;
     }
